# path-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/path_tracer/: Bitmap.h  Camera.h  EnvLight.h  Light.h  Material.h  Math.h  Object.h  Ray.h  Renderer.h  Scene.h  Shader.h
include/path_tracer/envlights/: EnvLights.h  PureColorEnvLight.h  SkyboxLight.h
include/path_tracer/lights/: DiskLight.h  Lights.h  RectLight.h
include/path_tracer/materials/: DiffuseMat.h  Materials.h  MirrorMat.h  PBRMat.h  PBRMat_GGX.h  TransparentMat.h
include/path_tracer/objects/: Box.h  InfinitePlane.h  Objects.h  Rectangle.h  Sphere.h
include/path_tracer/shaders/: MirrorShader.h  NormalShader.h  PathTracingShader.h  Shaders.h
include/utils/: JsonParser.hpp  Timer.hpp
res/: CornellBoxRenderConfig.json  CornellBoxScene.json  RenderConfig.json  Scene.json
src/: Bitmap.cpp  CMakeLists.txt  Camera.cpp  InfinitePlane.cpp  PathTracingShader.cpp  Rectangle.cpp  Renderer.cpp  Scene.cpp  SkyboxLight.cpp  Sphere.cpp  main.cpp
